# python-practice

./: .dockerignore  .gitignore  Dockerfile  Dockerfile_tg_aggregator  Dockerfile_tg_bot  Dockerfile_whore_app  bot_service.py  docker-compose.yaml  generate_grid.py  practice.py  pyproject.toml  requirements.txt  terrain_algo_distinct.py  time_parser.py  whore_app.py  whore_srevice.py
.github/workflows/: docker-publish.yml
birdkyle_asyncio/: birdkyle_asyncio_demo.py
birdkyle_exception/: birdkyle_custom_exception.py
finance/: bond_price.py
src/algo/: astar.py  generate_grid.py  terrain_algo_distinct.py
src/birdkyle_asyncio/: birdkyle_asyncio_demo.py
src/birdkyle_exception/: birdkyle_custom_exception.py
src/finance/: bond_price.py
src/practice/: practice.py
src/test/: test2.py
src/tg_aggregator/: crud.py  database.py  generate_session_str.py  main.py  models.py  schemas.py  send_search_buttons.py  settings.py
src/tg_bot/: bot_service.py  time_parser.py  whore_app.py
src/tg_crawler/: config.py  main.py  run.py
src/tg_crawler/api/: groups.py
src/tg_crawler/bot/: bot_instance.py  handlers.py  scheduler.py
src/tg_crawler/db/: models.py  schemas.py  session.py
tests/: test_gemini_api.py
